--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 		<script type="text/javascript" src="lib/scripts/angular-animate.min.js"></script>
 		<script type="text/javascript" src="lib/scripts/angular-idle.js"></script>
 		<script type="text/javascript" src="lib/scripts/ui-bootstrap-tpls-2.0.1.min.js"></script>
+		<script type="text/javascript" src="lib/scripts/moment.min.js"></script>
+		<script type="text/javascript" src="lib/scripts/moment-timezone-with-data.min.js"></script>
 		<script type="text/javascript" src="scripts/solo.js"></script>
 		<script type="text/javascript" src="scripts/settings.js"></script>
 		<script type="text/javascript" src="scripts/lock.js"></script>
