--- a/public/dialogs/save_doc.html
+++ b/public/dialogs/save_doc.html
@@ -12,6 +12,6 @@
 		</div>
 	</form>
 </div>
-<div class="modal-footer bg-primary">
+<div class="modal-footer bg-info">
 	<p>{{counts.characters | number}} characters / {{counts.words | number}} words</p>
 </div>
